Modified instruction