@@ -22,6 +22,8 @@ If 'POstgres' is not used, some changes will be required in configuration files.
 
 Install and start PostgreSQL.
 
+crate database 'tourreserve'.
+
 #### Insert test data
 
 It is assumed that maven is already installed.
@@ -31,7 +33,9 @@ If it is set to any other password, then update the password in terasoluna-tourr
 
 Execute the below command:
 
-	$ mvn -f terasoluna-tourreservation-initdb/pom.xml sql:execute
+	$ cd terasoluna-tourreservation-initdb
+	$ mvn sql:execute
+	$ cd ..
 
 Test data is currently available in Japanese only.
 
@@ -50,6 +54,8 @@ If db user password is not set to 'POstgres', then go to terasoluna-tourreservat
 #### Deploy war
 
 Deploy `terasoluna-tourreservation-web/target/terasoluna-tourreservation-web.war` to your Application server (ex. Tomcat7)
+
+You can also use `mvn tomcat7:run` to test this application quickly with option `MAVEN_OPTS=-XX:MaxPermSize=256m` in environment variable.
 
 access http://localhost:8080/terasoluna-tourreservation-web
 
